--- a/Brayan/Styles.css
+++ b/Brayan/Styles.css
@@ -1,3 +1,36 @@
 body{
     margin: 0;
 }
+
+/* Diseño de barra navegación ================= */
+.nav{
+    background: rgba(0, 0, 0, 0.8);
+    position: fixed;
+
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+
+    padding: 15px;
+    width: 100%;
+}
+
+.a_nav{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-size: 13px;
+}
+
+
+/* Diseño de primera seccion - Principal ====== */
+.seccion_uno{
+    margin-top: 100px;
+    position: absolute;
+
+    width: 100vw;
+    height: 736px;
+    
+    background-image: url(Imagenes\Web\principal.jpg);
+    background-size: 3008px;
+    background-position: center;    
+}
