--- a/Brayan/Styles.css
+++ b/Brayan/Styles.css
@@ -4,7 +4,11 @@ body{
 
 /* Diseño de barra navegación ================= */
 .nav{
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
+
+
     position: fixed;
 
     display: flex;
@@ -13,24 +17,58 @@ body{
 
     padding: 15px;
     width: 100%;
+
+    z-index: 3;
 }
 
 .a_nav{
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: rgba(255, 255, 255, 0.6);
     font-size: 13px;
 }
 
 
 /* Diseño de primera seccion - Principal ====== */
 .seccion_uno{
-    margin-top: 100px;
+    margin-top: 0px;
     position: absolute;
 
     width: 100vw;
     height: 736px;
     
-    background-image: url(Imagenes\Web\principal.jpg);
+    background: url(Imagenes/Web/principal.jpg);
     background-size: 3008px;
-    background-position: center;    
+    background-position: center;   
+    
+    
+} 
+
+.text{
+    text-align: center;
+    color: #ffffff;
+    text-decoration: none;
+    margin: 80px 0px -30px 0px;
+
+    z-index: 2;
+}
+
+
+
+
+footer{
+    background: rgba(255, 255, 255, 0.9);
+    font-size: 13px;
+
+    color: rgba(0, 0, 0, 0.65);
+
+    position: fixed;
+
+    display: flex;
+    justify-content: center;
+
+    width: 100%;
+
+    bottom:0;
+
+    z-index: 3;
 }
